[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.15", default-features = false, features = ["std", "derive"] }
axum = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
